[project]
name = "gamblebot"
version = "0.1.0"
description = "NFL 2+ touchdown prop analysis tool"
authors = [{ name = "AutoGen" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # Core deps
  "click",
  "rich",
  "requests-cache",
  "nfl_data_py",

  # Force modern scientific stack on 3.13+
  "numpy>=2.1,<3 ; python_version >= '3.13'",
  "pandas>=2.2.3,<3 ; python_version >= '3.13'",

  # Reasonable floors for older Pythons if you ever use them
  "pandas>=2.1 ; python_version < '3.13'",
]

[project.optional-dependencies]
report = ["dataframe-image"]

[project.scripts]
two-td = "gamblebot.cli:main"
gamblebot = "gamblebot.cli:main"
[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
